added mutifile upload and textarea to print backend result

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -43,3 +43,9 @@
   text-transform: capitalize;
   text-align: center;
 }
+
+#jsonResult {
+  min-width: -webkit-fill-available;
+  min-height: 200px;
+  margin-top: 20px;
+}
